slurm/slurm-6013240.out
#!/bin/bash
#SBATCH --job-name=data-proc
#SBATCH --partition=gpu-rtx6k
#SBATCH --account=cse
#SBATCH --nodes=1
#SBATCH --cpus-per-task=8
#SBATCH --mem=32G
#SBATCH --gres=gpu:1
#SBATCH --time=11:00:00
#SBATCH --mail-type=ALL
#SBATCH --mail-user=tjung2@uw.edu

# I use source to initialize conda into the right environment.
cat $0
echo "--------------------"

source ~/.bashrc
conda activate ckl

python run.py --config configs/templama/training/t5_kadapters_2010_2freeze.json
--------------------
Traceback (most recent call last):
  File "run.py", line 12, in <module>
    from models import load_model
  File "/mmfs1/gscratch/ark/tjung2/continual-knowledge-learning/models/__init__.py", line 2, in <module>
    from models.T5_Model import T5 as T5_Model
  File "/mmfs1/gscratch/ark/tjung2/continual-knowledge-learning/models/T5_Model.py", line 5, in <module>
    from models.Kadapter_T5 import T5ForConditionalGeneration as T5_Kadapter
  File "/mmfs1/gscratch/ark/tjung2/continual-knowledge-learning/models/Kadapter_T5.py", line 1528
    self.config.update('adapter_enc_dec': adapter_config.enc_dec)
                                        ^
SyntaxError: invalid syntax
